--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ env:
     - TRAVIS_FLAVOR=hbase_master
     - TRAVIS_FLAVOR=hbase_regionserver
     - TRAVIS_FLAVOR=redis_sentinel FLAVOR_VERSION="latest"
+    - TRAVIS_FLAVOR=spinnaker_clouddriver FLAVOR_VERSION=latest
     # END OF TRAVIS MATRIX
 
 before_install:
